[gd_scene load_steps=6 format=3 uid="uid://brtxtwfmvyin5"]

[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/preview/dialogue_events/ChoiceEvent.gd" id="1_4cko4"]
[ext_resource type="Theme" uid="uid://ca8rtymjhdhox" path="res://addons/hyh.cutscene_graph/editor/preview/dialogue_events/styles/dialogue_events_theme.tres" id="1_420c7"]
[ext_resource type="Texture2D" uid="uid://dkeputvqdl5bg" path="res://addons/hyh.cutscene_graph/icons/icon_tree_arrow_right.svg" id="2_2hvgq"]
[ext_resource type="PackedScene" uid="uid://d2vbxgl24awpj" path="res://addons/hyh.cutscene_graph/editor/preview/dialogue_events/ChoiceEventChoice.tscn" id="3_deml5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bvnm2"]
content_margin_left = 8.0
content_margin_top = 6.0
content_margin_right = 8.0
content_margin_bottom = 6.0
bg_color = Color(0.329412, 0.847059, 0.741176, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0, 0, 0, 0.415686)
shadow_size = 3
shadow_offset = Vector2(3, 3)

[node name="ChoiceEvent" type="MarginContainer"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
script = ExtResource("1_4cko4")

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SelectedChoice" type="HBoxContainer" parent="VB"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VB/SelectedChoice"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_420c7")
theme_override_styles/panel = SubResource("StyleBoxFlat_bvnm2")

[node name="HBoxContainer" type="HBoxContainer" parent="VB/SelectedChoice/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VB/SelectedChoice/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_2hvgq")
stretch_mode = 2

[node name="SelectedChoiceLabel" type="Label" parent="VB/SelectedChoice/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Selected choice goes here"
autowrap_mode = 3

[node name="ChoicesContainer" type="VBoxContainer" parent="VB"]
layout_mode = 2

[node name="ChoiceEventChoice" parent="VB/ChoicesContainer" instance=ExtResource("3_deml5")]
layout_mode = 2

[node name="ChoiceEventChoice2" parent="VB/ChoicesContainer" instance=ExtResource("3_deml5")]
layout_mode = 2
